CREATE TABLE IF NOT EXISTS users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    fiscal_code VARCHAR(16) NOT NULL,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    email VARCHAR(254) NOT NULL,
    phone VARCHAR(32) NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    role VARCHAR(16) NOT NULL,
    manager_id BIGINT,
    active BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_users_fiscal_code UNIQUE (fiscal_code),
    CONSTRAINT uq_users_email UNIQUE (email),
    CONSTRAINT ck_users_role CHECK (role IN ('CUSTOMER', 'SALESMAN', 'MANAGER')),
    CONSTRAINT ck_users_manager_role CHECK (role = 'SALESMAN' OR manager_id IS NULL),
    CONSTRAINT fk_users_manager FOREIGN KEY (manager_id) REFERENCES users (id)
);

CREATE TABLE IF NOT EXISTS brands (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(120) NOT NULL,
    CONSTRAINT uq_brands_name UNIQUE (name)
);

CREATE TABLE IF NOT EXISTS vehicle_models (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    brand_id BIGINT NOT NULL,
    code VARCHAR(64) NOT NULL,
    name VARCHAR(120) NOT NULL,
    model_year SMALLINT NOT NULL,
    CONSTRAINT uq_vehicle_models_code UNIQUE (code),
    CONSTRAINT uq_vehicle_models_identity UNIQUE (brand_id, name, model_year),
    CONSTRAINT ck_vehicle_models_year CHECK (model_year BETWEEN 1886 AND 2200),
    CONSTRAINT fk_vehicle_models_brand FOREIGN KEY (brand_id) REFERENCES brands (id)
);

CREATE TABLE IF NOT EXISTS vehicles (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    plate VARCHAR(10) NOT NULL,
    model_id BIGINT NOT NULL,
    purpose VARCHAR(24) NOT NULL,
    sale_price NUMERIC(12, 2),
    daily_rental_rate NUMERIC(12, 2),
    mileage BIGINT NOT NULL DEFAULT 0,
    status VARCHAR(20) NOT NULL DEFAULT 'AVAILABLE',
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_vehicles_plate UNIQUE (plate),
    CONSTRAINT ck_vehicles_purpose CHECK (
        purpose IN ('FOR_SALE', 'RENTAL', 'ACQUISITION_REQUEST')
    ),
    CONSTRAINT ck_vehicles_status CHECK (
        status IN ('AVAILABLE', 'RESERVED', 'RENTED', 'TEST_DRIVE', 'SOLD', 'MAINTENANCE')
    ),
    CONSTRAINT ck_vehicles_mileage CHECK (mileage >= 0),
    CONSTRAINT ck_vehicles_prices CHECK (
        (sale_price IS NULL OR sale_price >= 0)
        AND (daily_rental_rate IS NULL OR daily_rental_rate >= 0)
    ),
    CONSTRAINT ck_vehicles_required_price CHECK (
        (purpose = 'FOR_SALE' AND sale_price > 0)
        OR (purpose = 'RENTAL' AND daily_rental_rate > 0)
        OR purpose = 'ACQUISITION_REQUEST'
    ),
    CONSTRAINT fk_vehicles_model FOREIGN KEY (model_id) REFERENCES vehicle_models (id)
);

CREATE TABLE IF NOT EXISTS discounts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(120) NOT NULL,
    vehicle_id BIGINT NOT NULL,
    percentage NUMERIC(5, 2) NOT NULL,
    starts_on DATE NOT NULL,
    ends_on DATE NOT NULL,
    enabled BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT uq_discounts_vehicle UNIQUE (vehicle_id),
    CONSTRAINT ck_discounts_percentage CHECK (percentage > 0 AND percentage <= 100),
    CONSTRAINT ck_discounts_period CHECK (starts_on <= ends_on),
    CONSTRAINT fk_discounts_vehicle FOREIGN KEY (vehicle_id) REFERENCES vehicles (id)
);

CREATE TABLE IF NOT EXISTS rentals (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    customer_id BIGINT NOT NULL,
    salesman_id BIGINT,
    vehicle_id BIGINT NOT NULL,
    starts_on DATE NOT NULL,
    ends_on DATE NOT NULL,
    total_price NUMERIC(12, 2) NOT NULL,
    status VARCHAR(16) NOT NULL DEFAULT 'REQUESTED',
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_rentals_period CHECK (starts_on < ends_on),
    CONSTRAINT ck_rentals_price CHECK (total_price > 0),
    CONSTRAINT ck_rentals_status CHECK (
        status IN ('REQUESTED', 'ASSIGNED', 'CONFIRMED', 'ACTIVE', 'COMPLETED', 'CANCELLED')
    ),
    CONSTRAINT ck_rentals_assignment CHECK (
        (status = 'REQUESTED' AND salesman_id IS NULL)
        OR (status IN ('ASSIGNED', 'CONFIRMED', 'ACTIVE', 'COMPLETED') AND salesman_id IS NOT NULL)
        OR status = 'CANCELLED'
    ),
    CONSTRAINT fk_rentals_customer FOREIGN KEY (customer_id) REFERENCES users (id),
    CONSTRAINT fk_rentals_salesman FOREIGN KEY (salesman_id) REFERENCES users (id),
    CONSTRAINT fk_rentals_vehicle FOREIGN KEY (vehicle_id) REFERENCES vehicles (id)
);

CREATE TABLE IF NOT EXISTS test_drives (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    customer_id BIGINT NOT NULL,
    salesman_id BIGINT,
    vehicle_id BIGINT NOT NULL,
    scheduled_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    ends_at TIMESTAMP WITHOUT TIME ZONE NOT NULL,
    status VARCHAR(16) NOT NULL DEFAULT 'REQUESTED',
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_test_drives_vehicle_slot UNIQUE (vehicle_id, scheduled_at),
    CONSTRAINT uq_test_drives_customer_slot UNIQUE (customer_id, scheduled_at),
    CONSTRAINT ck_test_drives_period CHECK (scheduled_at < ends_at),
    CONSTRAINT ck_test_drives_duration CHECK (ends_at <= scheduled_at + INTERVAL '4' HOUR),
    CONSTRAINT ck_test_drives_status CHECK (
        status IN ('REQUESTED', 'CONFIRMED', 'IN_PROGRESS', 'COMPLETED', 'CANCELLED')
    ),
    CONSTRAINT ck_test_drives_assignment CHECK (
        (status = 'REQUESTED' AND salesman_id IS NULL)
        OR (status IN ('CONFIRMED', 'IN_PROGRESS', 'COMPLETED') AND salesman_id IS NOT NULL)
        OR status = 'CANCELLED'
    ),
    CONSTRAINT fk_test_drives_customer FOREIGN KEY (customer_id) REFERENCES users (id),
    CONSTRAINT fk_test_drives_salesman FOREIGN KEY (salesman_id) REFERENCES users (id),
    CONSTRAINT fk_test_drives_vehicle FOREIGN KEY (vehicle_id) REFERENCES vehicles (id)
);

CREATE TABLE IF NOT EXISTS sale_orders (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    customer_id BIGINT NOT NULL,
    salesman_id BIGINT,
    vehicle_id BIGINT NOT NULL,
    total_price NUMERIC(12, 2) NOT NULL,
    required_deposit NUMERIC(12, 2) NOT NULL,
    paid_amount NUMERIC(12, 2) NOT NULL DEFAULT 0,
    status VARCHAR(16) NOT NULL DEFAULT 'RESERVED',
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_sale_orders_amounts CHECK (
        total_price > 0
        AND required_deposit > 0
        AND required_deposit <= total_price
        AND paid_amount >= 0
        AND paid_amount <= total_price
    ),
    CONSTRAINT ck_sale_orders_status CHECK (
        status IN ('RESERVED', 'DEPOSIT_PAID', 'PAID', 'COMPLETED', 'CANCELLED')
    ),
    CONSTRAINT fk_sale_orders_customer FOREIGN KEY (customer_id) REFERENCES users (id),
    CONSTRAINT fk_sale_orders_salesman FOREIGN KEY (salesman_id) REFERENCES users (id),
    CONSTRAINT fk_sale_orders_vehicle FOREIGN KEY (vehicle_id) REFERENCES vehicles (id)
);

CREATE TABLE IF NOT EXISTS payments (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    payer_id BIGINT NOT NULL,
    rental_id BIGINT,
    sale_order_id BIGINT,
    purpose VARCHAR(20) NOT NULL,
    method VARCHAR(20) NOT NULL,
    amount NUMERIC(12, 2) NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL,
    status VARCHAR(16) NOT NULL DEFAULT 'PENDING',
    processor_reference VARCHAR(128),
    failure_reason VARCHAR(500),
    CONSTRAINT uq_payments_processor_reference UNIQUE (processor_reference),
    CONSTRAINT ck_payments_amount CHECK (amount > 0),
    CONSTRAINT ck_payments_purpose CHECK (
        purpose IN ('RENTAL', 'SALE_DEPOSIT', 'SALE_BALANCE')
    ),
    CONSTRAINT ck_payments_method CHECK (method IN ('CARD', 'BANK_TRANSFER', 'CASH')),
    CONSTRAINT ck_payments_status CHECK (status IN ('PENDING', 'COMPLETED', 'FAILED')),
    CONSTRAINT ck_payments_single_context CHECK (
        (rental_id IS NOT NULL AND sale_order_id IS NULL AND purpose = 'RENTAL')
        OR (rental_id IS NULL AND sale_order_id IS NOT NULL AND purpose IN ('SALE_DEPOSIT', 'SALE_BALANCE'))
    ),
    CONSTRAINT ck_payments_result CHECK (
        (status = 'PENDING' AND processor_reference IS NULL AND failure_reason IS NULL)
        OR (status = 'COMPLETED' AND processor_reference IS NOT NULL AND failure_reason IS NULL)
        OR (status = 'FAILED' AND processor_reference IS NULL AND failure_reason IS NOT NULL)
    ),
    CONSTRAINT fk_payments_payer FOREIGN KEY (payer_id) REFERENCES users (id),
    CONSTRAINT fk_payments_rental FOREIGN KEY (rental_id) REFERENCES rentals (id),
    CONSTRAINT fk_payments_sale_order FOREIGN KEY (sale_order_id) REFERENCES sale_orders (id)
);

CREATE TABLE IF NOT EXISTS purchase_proposals (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    customer_id BIGINT NOT NULL,
    vehicle_id BIGINT NOT NULL,
    requested_amount NUMERIC(12, 2) NOT NULL,
    customer_notes VARCHAR(1000) NOT NULL,
    requested_at TIMESTAMP WITH TIME ZONE NOT NULL,
    salesman_id BIGINT,
    offered_amount NUMERIC(12, 2),
    offer_terms VARCHAR(1000),
    manager_id BIGINT,
    decision_reason VARCHAR(1000),
    status VARCHAR(16) NOT NULL DEFAULT 'REQUESTED',
    CONSTRAINT ck_purchase_proposals_amounts CHECK (
        requested_amount > 0 AND (offered_amount IS NULL OR offered_amount > 0)
    ),
    CONSTRAINT ck_purchase_proposals_status CHECK (
        status IN ('REQUESTED', 'OFFERED', 'APPROVED', 'REJECTED')
    ),
    CONSTRAINT ck_purchase_proposals_state CHECK (
        (status = 'REQUESTED' AND salesman_id IS NULL AND offered_amount IS NULL
            AND offer_terms IS NULL AND manager_id IS NULL AND decision_reason IS NULL)
        OR (status = 'OFFERED' AND salesman_id IS NOT NULL AND offered_amount IS NOT NULL
            AND offer_terms IS NOT NULL AND manager_id IS NULL AND decision_reason IS NULL)
        OR (status IN ('APPROVED', 'REJECTED') AND salesman_id IS NOT NULL
            AND offered_amount IS NOT NULL AND offer_terms IS NOT NULL
            AND manager_id IS NOT NULL AND decision_reason IS NOT NULL)
    ),
    CONSTRAINT fk_purchase_proposals_customer FOREIGN KEY (customer_id) REFERENCES users (id),
    CONSTRAINT fk_purchase_proposals_vehicle FOREIGN KEY (vehicle_id) REFERENCES vehicles (id),
    CONSTRAINT fk_purchase_proposals_salesman FOREIGN KEY (salesman_id) REFERENCES users (id),
    CONSTRAINT fk_purchase_proposals_manager FOREIGN KEY (manager_id) REFERENCES users (id)
);

CREATE TABLE IF NOT EXISTS stock_orders (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    manager_id BIGINT NOT NULL,
    model_id BIGINT NOT NULL,
    quantity INTEGER NOT NULL,
    unit_cost NUMERIC(12, 2) NOT NULL,
    placed_on DATE NOT NULL,
    status VARCHAR(16) NOT NULL DEFAULT 'PLACED',
    received_on DATE,
    CONSTRAINT ck_stock_orders_quantity CHECK (quantity > 0),
    CONSTRAINT ck_stock_orders_unit_cost CHECK (unit_cost > 0),
    CONSTRAINT ck_stock_orders_status CHECK (
        status IN ('PLACED', 'CONFIRMED', 'RECEIVED', 'CANCELLED')
    ),
    CONSTRAINT ck_stock_orders_received CHECK (
        (status = 'RECEIVED' AND received_on IS NOT NULL AND received_on >= placed_on)
        OR (status <> 'RECEIVED' AND (received_on IS NULL OR received_on >= placed_on))
    ),
    CONSTRAINT fk_stock_orders_manager FOREIGN KEY (manager_id) REFERENCES users (id),
    CONSTRAINT fk_stock_orders_model FOREIGN KEY (model_id) REFERENCES vehicle_models (id)
);
